fix minimap flickering

--- a/scss/patch.scss
+++ b/scss/patch.scss
@@ -30,6 +30,7 @@
     rect
     {
         vector-effect:non-scaling-stroke;
+        pointer-events: none;
     }
 
     .op_minirect_default { fill:$color_op_handle_default;}
